Fix display issues for account and payments.

--- a/Stellar.Common.Ui/Stellar.Common.Ui.csproj
+++ b/Stellar.Common.Ui/Stellar.Common.Ui.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Controls\ThemeManager.cs" />
     <Compile Include="Controls\ViewLocator.cs" />
     <Compile Include="Converters\AccountAbbreviatorValueConverter.cs" />
+    <Compile Include="Converters\BlanaceTextConverter.cs" />
     <Compile Include="IShell.cs" />
     <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\FlyoutBaseViewModel.cs" />
